--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(240, 240, 238);
-  margin: 0 auto 0 auto;
+  margin: 0 auto 0 auto; /* järjestys on ylhäältä-oikealle-alhaalta-vasemmalle */
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -18,9 +18,9 @@ body {
   line-height: 50px;
   text-align: center;
 }
+/* laita konttiin kaikki muu sisältö paitsi h1 ja nav-valikko */
 #Container {
   margin: 0 20px 0 20px;
-
 }
 .header {
   text-align: center;
@@ -63,5 +63,5 @@ img {
 }
 #Big-image {
   width: 100%;
-  margin: 0 auto;
+  margin: 0 auto; /* mahdollistaa kuvan keskittämisen vaakasuoraan */
 }
