--- a/styles/styles_asiakkaat.css
+++ b/styles/styles_asiakkaat.css
@@ -6,6 +6,10 @@ table {
   border-collapse: collapse;
   border: 1px solid black;
 }
+/*
+  mahdollista käyttää 2 vaihtoehtoa, kuten table#Asiakkaat vai #Asiakkaat.
+  molemmat toimivat samalla tavalla
+*/
 #Asiakkaat { 
   font-family: Helvetica, Arial, sans-serif;
   border-collapse: collapse;
